@startuml

class Client {
    - nom: str
    - adreca: str
    - telefon: str
    - email: str
    + __init__(nom: str, adreca: str, telefon: str, email: str)
}

class UsuariWeb {
    - login: str
    - password: str
    - estat: str
    + __init__(login: str, password: str, estat: str)
}

class CarroCompra {
    - client: Client
    - factura: Factura
    - linies_comanda: list[LineaComanda]
    + __init__(client: Client, factura: Factura)
}

class Producte {
    - codi_identificatiu: str
    - nom: str
    - proveidor: str
    + __init__(codi_identificatiu: str, nom: str, proveidor: str)
}

class Factura {
    - codi_factura: str
    - adreca_facturacio: str
    - data_emissio: str
    - data_tancament: str
    - pagament: str
    + __init__(codi_factura: str, adreca_facturacio: str, data_emissio: str, data_tancament: str, pagament: str)
}

class LiniaComanda {
    - producte: Producte
    - quantitat: int
    - preu: float
    + __init__(producte: Producte, quantitat: int, preu: float)
}

class OrdreEnviament {
    - codi_identificatiu: str
    - data_comanda: str
    - data_enviament: str
    - destinacio: str
    - import: float
    - estat: str
    + __init__(codi_identificatiu: str, data_comanda: str, data_enviament: str, destinacio: str, import: float, estat: str)
}

Client "1" *-- "0..*" UsuariWeb
Client "1" *-- "*" CarroCompra
CarroCompra "*" *-- "1" Factura
CarroCompra "1" *-- "*" LiniaComanda
Factura "*" *-- "*" OrdreEnviament

@enduml
